<resources>
    <string name="app_name">COVID-19 Tracking</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_button">Reset</string>
    <string name="login_button">Login</string>
    <string name="register_description">Dont Have Any Account ? Register Here</string>
    <string name="google_login_description">Sign In with Google Account</string>
    <string name="forget_password_description">Forget Password ?</string>
    <string name="password_instruction">Password</string>
    <string name="input_password">Input Password:</string>
    <string name="input_email">Input Email :</string>
    <string name="email_instruction">Email</string>
    <string name="back_button">Back Button</string>
    <string name="register_title">Register Menu</string>
    <string name="input_name">Input Name :</string>
    <string name="name_instruction">Name</string>
    <string name="confirmation_password">Confirm Password :</string>
    <string name="confirmation_password_instruction">Password Confirmation</string>
    <string name="register_button">Register</string>
    <string name="forget_password_title">Forget Password ?</string>
    <string name="forget_password_instruction1">Are You Forget Your Password ?</string>
    <string name="forget_password_instruction2">Just Input Your Email Below</string>
    <string name="submit_button">Submit</string>
    <string name="continent">Continent</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="death">Death</string>
    <string name="recover">Recovered</string>
    <string name="detail">Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="global">Global</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="search">Search</string>
    <string name="covid_19_continent_data">COVID-19 Continent Data</string>
    <string name="covid_19_global_data">COVID-19 Global Data</string>
    <string name="logo_of_covid19">Logo of COVID19</string>
    <string name="value">Value</string>
    <string name="title">Title</string>
    <string name="total_active_case">Total Active Case</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_death">Total Death</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="sort">Sort</string>
    <string name="tv_continent_name">Continent Name</string>
    <string name="tv_continent_totalcase">Total Case  :</string>
    <string name="tv_continent_activecase">Active Case :</string>
    <string name="tv_continent_deathcase">Death Case :</string>
    <string name="tv_continent_recoveredcase">Recovered  :</string>
    <string name="continent_country_list">Country List :</string>
    <string name="country_name">Country Name</string>
    <string name="country_continent">Country Continent</string>
    <string name="country_total_case">Country Total Case</string>
    <string name="country_flags">Country Flags</string>
    <string name="country_flag">Country Flag</string>
    <string name="tv_country_name">Country Name</string>
    <string name="tv_country_totalcase">Total Case  :</string>
    <string name="tv_country_activecase">Active Case :</string>
    <string name="tv_country_deathcase">Death Case :</string>
    <string name="other_country_case">Other Country Case</string>
    <string name="tv_country_recoveredcase">Recovered  :</string>
    <string name="country_flag_images">Country Flag Images</string>
    <string name="sort_by_cases">Sort by Cases</string>
    <string name="sort_by_recovered">Sort by Recovered</string>
    <string name="sort_by_deaths">Sort by Deaths</string>
    <string name="sort_by">Sort By</string>
    <string name="last_data_updated">Last Data Updated :</string>
    <string name="today_case">Today Case :</string>
    <string name="today_recovered">Today Recovered :</string>
    <string name="today_death">Today Death :</string>
    <string name="total_population">Total Population :</string>
    <string name="sort_continents_countries_data">Sort Continents / Countries Data</string>
    <string name="title_select_sort_type">Select Sort Type :</string>
    <string name="select_sort_type">Select Sort Type</string>
    <string name="title_sort_data_by">Sort Data By :</string>
    <string name="sort_data_by">Sort Data By</string>
    <string name="sort_data">Sort Data</string>
    <string name="search_continents_countries">Search Continents / Countries</string>
    <string name="title_select_search_type">Select Search Type</string>
    <string name="select_search_type">Select Search Type</string>
    <string name="title_input_search">Input Search :</string>
    <string name="search_data">Search Data</string>
    <string name="input_search">Input Search</string>
    <string name="case_total">Total Case</string>
    <string name="case_active">Active Case</string>
    <string name="web_client_id">817774831351-nubo6u8jtkbffl55har20ln56b0k2m12.apps.googleusercontent.com</string>
    <string name="title_nav_home">COVID-19 All Continents Data</string>
    <string name="title_nav_global">COVID-19 All Countries Data</string>
    <string name="tv_continents">Continents</string>
    <string name="tv_countries">Countries</string>
    <string name="no_results">No Results !!!, Please Enter Different Keyword</string>
    <string name="countries_continent_list">Countries Continent List</string>
</resources>