<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/item_home"
        android:title="@string/home">
        <menu>
            <item android:id="@+id/nav_home"
                android:title="@string/title_nav_home"
                android:icon="@drawable/ic_virus"/>
        </menu>
    </item>

    <item android:id="@+id/item_global"
        android:title="@string/global">
        <menu>
            <item android:id="@+id/nav_global"
                android:title="@string/title_nav_global"
                android:icon="@drawable/ic_virus"/>
        </menu>
    </item>

    <item android:id="@+id/item_logout"
        android:title="@string/logout">
        <menu>
            <item android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>