<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/country_flags" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/countryFlag"
        android:layout_marginHorizontal="15dp"
        android:text="@string/country_name"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/countryContinent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/countryFlag"
        android:layout_below="@+id/countryName"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/country_continent"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/countryTotalCase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countryContinent"
        android:layout_toEndOf="@+id/countryFlag"
        android:layout_marginHorizontal="15dp"
        android:text="@string/country_total_case"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"/>

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@+id/countryFlag"
        android:layout_marginVertical="5dp"
        android:background="@android:color/background_light" />
</RelativeLayout>