<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/containerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/textSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/sort_continents_countries_data"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/titleSortType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5dp"
            android:text="@string/title_select_sort_type"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textSortType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_dropdown"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/select_sort_type"
            android:textColorHint="@android:color/background_dark"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_sort_black"
            app:drawableEndCompat="@drawable/ic_dropdown" />

        <TextView
            android:id="@+id/titleSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5dp"
            android:text="@string/title_sort_data_by"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_dropdown"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/sort_data_by"
            android:textColorHint="@android:color/background_dark"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_sort_black"
            app:drawableEndCompat="@drawable/ic_dropdown" />

        <Button
            android:id="@+id/btnSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/background_button"
            android:text="@string/sort_data"/>

    </LinearLayout>

</LinearLayout>