<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/containerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/textSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/search_continents_countries"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/titleSearchType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5dp"
            android:text="@string/title_select_search_type"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroupSearchType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_dropdown"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSearchContinents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:text="@string/tv_continents"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/radioSearchCountries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:text="@string/tv_countries"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </RadioGroup>

        <TextView
            android:id="@+id/titleSearchBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5dp"
            android:text="@string/title_input_search"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutSearchBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_dropdown"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/textSearchBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search_black"
                android:drawablePadding="10dp"
                android:hint="@string/input_search"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textColorHint="@android:color/background_dark"
                android:autofillHints="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/background_button"
            android:text="@string/search_data"/>

    </LinearLayout>

</LinearLayout>