<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".activities.ContinentDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        app:logo="@drawable/ic_back"
        app:title="@string/app_name"
        app:titleMarginStart="32dp"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/loadingDetails"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/toolbar">

        <LinearLayout android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textContinentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/tv_continent_name"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textContinentTotalCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/tv_continent_totalcase"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textContinentActiveCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/tv_continent_activecase"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textContinentDeath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/tv_continent_deathcase"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textContinentRecovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_continent_recoveredcase"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

            <View
                android:id="@+id/horizontalDivider"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="-15dp"
                android:layout_height="1.5dp"
                android:background="@android:color/background_light" />

            <TextView
                android:id="@+id/textContinentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/continent_country_list"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textCountriesName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>